@@ -1,76 +1,9 @@
-2013-10-10  Joseph Myers  <joseph@codsourcery.com>
+2013-10-25  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
-	* sysdeps/ieee754/ldbl-128ibm/e_acosl.c (__ieee754_acosl): Check
-	for NaNs before doing comparisons on argument.
-	* sysdeps/ieee754/ldbl-128ibm/e_asinl.c (__ieee754_asinl):
-	Likewise.
+	[BZ #16072]
+	* sysdeps/posix/getaddrinfo.c (gethosts): Allocate tmpbuf on
+	heap for large requests.
 
-2013-10-04  Anton Blanchard <anton@au1.ibm.com>
-	    Alistair Popple <alistair@ozlabs.au.ibm.com>
-	    Alan Modra <amodra@gmail.com>
-
-	[BZ #15723]
-	* sysdeps/powerpc/jmpbuf-offsets.h: Comment fix.
-	* sysdeps/powerpc/powerpc32/fpu/__longjmp-common.S: Correct
-	_dl_hwcap access for little-endian.
-	* sysdeps/powerpc/powerpc32/fpu/setjmp-common.S: Likewise.  Don't
-	destroy vmx regs when saving unaligned.
-	* sysdeps/powerpc/powerpc64/__longjmp-common.S: Correct CR load.
-	* sysdeps/powerpc/powerpc64/setjmp-common.S: Likewise CR save.  Don't
-	destroy vmx regs when saving unaligned.
-
-2013-09-09  Allan McRae  <allan@archlinux.org>
-
-	[BZ #15893]
-	* stdlib/isomac.c (get_null_defines): Fix memory leak.
-
-	[BZ #15892]
-	* libio/memstream.c (open_memstream): Fix memory leak.
-	* libio/wmemstream.c (open_wmemstream): Likewise.
-
-	[BZ #15895]
-	* nscd/netgroupcache.c: Fix nesting of ifdefs.
-
-2013-09-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
-
-	* sysdeps/powerpc/powerpc32/power7/memrchr.S (__memrchr): Fix invalid
-	memory access for final bytes in some large inputs.
-	* sysdeps/powerpc/powerpc64/power7/memrchr.S (__memrchr): Likewise.
-
-2013-09-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
-
-	* string/test-memrchr.c: New file.
-	* string/test-memrchr-ifunc.c: New file.
-	* string/Makefile: Add new memrchr testcase.
-
-2013-09-03  Joseph Myers  <joseph@codesourcery.com>
-
-	[BZ #15427]
-	* sysdeps/ieee754/flt-32/e_lgammaf_r.c (__ieee754_lgammaf_r): Use
-	2**-30 instead of 2**-70 as threshold for returning -log(|x|).
-	* math/libm-test.inc (lgamma_test_data): Add more tests.
-	* sysdeps/i386/fpu/libm-test-ulps: Update.
-	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.
-
-2013-09-03   Ondřej Bílka  <neleai@seznam.cz>
-
-	* sysdeps/x86_64/multiarch/strcmp-sse2-unaligned.S: New file.
-	* sysdeps/x86_64/multiarch/ifunc-impl-list.c (__libc_ifunc_impl_list):
-	Add ifunc.
-	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines):
-	Add strcmp-sse2-unaligned
-	* sysdeps/x86_64/multiarch/strcmp.S (strcmp): Add ifunc.
-
-2013-09-02  Mike Frysinger  <vapier@gentoo.org>
-
-	* Versions.def (libc): Add GLIBC_2.19.
-
-2013-09-02  Mike Frysinger  <vapier@gentoo.org>
-
-	* sysdeps/unix/sysv/linux/tst-fanotify.c: New test.
-	* sysdeps/unix/sysv/linux/Makefile (tests): Add tst-fanotify.
-
->>>>>>> ffa3cd7... Fix lgammaf spurious underflow (bug 15427).
 2013-09-02  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #14155]
